--- a/public/style.css
+++ b/public/style.css
@@ -5,27 +5,27 @@
     --field-background: white;
     --field-background-hover: #eee;
     --input-background: #eee;
-    --overlay-background: rgba(245, 158, 114, 0.8);
-    --overlay-caption-color: #eb4a40;
-    --overlay-content-background: linear-gradient(white, #fde0c5);
+    --overlay-background: rgba(99, 183, 175, 0.8);
+    --overlay-caption-color: white;
+    --overlay-content-background: linear-gradient(#626669, #486483);
 
-    --header-background: linear-gradient(to right, #eb4a40, #f59e72);
-    --main-panel-background: linear-gradient(white, #fde0c5);
-    --online-users-panel-background: linear-gradient(to right, #fde0c5, #facba6);
+    --header-background: linear-gradient(to right, #b13a32, #99564a);
+    --main-panel-background: linear-gradient(#626669, #486483);
+    --online-users-panel-background: linear-gradient(to top, #63B7AF, #347474);
     --chat-panel-background: none;
 
     --title-color: white;
     --caption-color: white;
 
-    --font-color: black;
+    --font-color: white;
     --date-color: gray;
 
-    --register-form-background: linear-gradient(#fde0c5, #facba6);
+    --register-form-background: linear-gradient(#63B7AF, #347474);
     --warning-color: red;
 
     --button-color: white;
-    --button-background: #f2855d;
-    --button-background-hover: #f8b58b;
+    --button-background: #5d6cf2;
+    --button-background-hover: #b5baec;
 }
 * {
     font-family: "Abel", sans-serif;
@@ -41,6 +41,11 @@ body {
     padding: 0;
     margin: 0;
 }
+
+input{
+    color: black;
+}
+
 .center { text-align: center; }
 .shadow { box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.4); }
 
@@ -174,7 +179,7 @@ button.icon:active {
 }
 #title .material-icons {
     color: var(--title-color);
-    font-size: 36px;
+    font-size: 42px;
 }
 #user-panel {
     padding: 0;
@@ -189,7 +194,7 @@ button.icon:active {
     background: var(--main-panel-background);
 }
 
-/* Chat area */
+/* Chat area (i.e. Description)*/
 #chat-panel {
     flex-grow: 1;
     align-items: stretch;
@@ -204,7 +209,18 @@ button.icon:active {
     gap: 20px;
     overflow-y: auto;
     padding: 10px;
+    padding-left: 50px;
 }
+
+#description-title {
+    font-size: 200%;
+}
+
+#pair-up {
+    font-size: 200%;
+    padding-top: 50px;
+}
+
 .chat-message-panel {
     align-items: flex-start;
     padding: 0;
@@ -233,11 +249,21 @@ button.icon:active {
     justify-content: start;
     overflow-y: auto;
 }
+#invitation{
+    align-items: flex-end;
+    padding: 20px;
+    font-size: 125%;
+}
+#invitation-buttons{
+    padding: 10px;
+    visibility: hidden;
+}
 
 /* Signin overlay */
 #signin-form {
     width: 270px;
     align-self: stretch;
+    
 }
 #register-form {
     width: 380px;
