--- a/public/ggstyle.css
+++ b/public/ggstyle.css
@@ -1,6 +1,5 @@
 body {
     font-family: "Press Start 2P", sans-serif;
-    
 }
 
 button {
@@ -21,13 +20,21 @@ button:hover {
     background: #d5d5e0;
 }
 
+* {
+    font-family: "Press Start 2P", sans-serif;
+    color: black;
+}
+
+
 .title{
+    font-family: "Press Start 2P", sans-serif;
     font-size: 200%;
     text-align: center;
     padding: 20px;
 }
 
 .content{
+    font-family: "Press Start 2P", sans-serif;
     font-size: 100%;
     text-align: center;
     padding: 10px;
@@ -49,7 +56,7 @@ button:hover {
 }
 
 #info-title{
-    transform: translateY(100%);
+    transform: translateY(50%);
 }
 
 #stat-container {
@@ -63,6 +70,7 @@ button:hover {
 }
 
 #promotion{
+    font-family: "Press Start 2P", sans-serif;
     padding-top: 50px;
     text-align: center;
     font-size: 80%;
